@@ -31,6 +31,7 @@ import io.ballerina.projects.Package;
 import io.ballerina.projects.PackageCompilation;
 import io.ballerina.projects.PlatformLibrary;
 import io.ballerina.projects.Project;
+import io.ballerina.projects.ProjectException;
 import io.ballerina.projects.ProjectKind;
 import io.ballerina.projects.ResolvedPackageDependency;
 import io.ballerina.projects.internal.model.Target;
@@ -110,6 +111,8 @@ public class RunTestsTask implements Task {
     private boolean listGroups;
     private final List<String> cliArgs;
 
+    private final boolean isParallelExecution;
+
     TestReport testReport;
     private static final Boolean isWindows = System.getProperty("os.name").toLowerCase(Locale.getDefault())
             .contains("win");
@@ -124,11 +127,13 @@ public class RunTestsTask implements Task {
 
     public RunTestsTask(PrintStream out, PrintStream err, boolean rerunTests, String groupList,
                         String disableGroupList, String testList, String includes, String coverageFormat,
-                        Map<String, Module> modules, boolean listGroups, String excludes, String[] cliArgs)  {
+                        Map<String, Module> modules, boolean listGroups, String excludes, String[] cliArgs,
+                        boolean isParallelExecution)  {
         this.out = out;
         this.err = err;
         this.isRerunTestExecution = rerunTests;
         this.cliArgs = List.of(cliArgs);
+        this.isParallelExecution = isParallelExecution;
 
         if (disableGroupList != null) {
             this.disableGroupList = disableGroupList;
@@ -195,7 +200,12 @@ public class RunTestsTask implements Task {
             Module module = project.currentPackage().module(moduleDescriptor.name());
             ModuleName moduleName = module.moduleName();
 
-            TestSuite suite = testProcessor.testSuite(module).orElse(null);
+            TestSuite suite;
+            try {
+                suite = testProcessor.testSuite(module).orElse(null);
+            } catch (ProjectException e) {
+                throw createLauncherException(e.getMessage());
+            }
             if (suite == null) {
                 continue;
             }
@@ -222,9 +232,9 @@ public class RunTestsTask implements Task {
                 String functionToMockClassName;
                 // Find the first delimiter and compare the indexes
                 // The first index should always be a delimiter. Which ever one that is denotes the mocking type
-                if (key.indexOf(MOCK_LEGACY_DELIMITER) == -1) {
+                if (!key.contains(MOCK_LEGACY_DELIMITER)) {
                     functionToMockClassName = key.substring(0, key.indexOf(MOCK_FN_DELIMITER));
-                } else if (key.indexOf(MOCK_FN_DELIMITER) == -1) {
+                } else if (!key.contains(MOCK_FN_DELIMITER)) {
                     functionToMockClassName = key.substring(0, key.indexOf(MOCK_LEGACY_DELIMITER));
                 } else {
                     if (key.indexOf(MOCK_FN_DELIMITER) < key.indexOf(MOCK_LEGACY_DELIMITER)) {
@@ -389,9 +399,8 @@ public class RunTestsTask implements Task {
         cmdArgs.add(this.singleExecTests != null ? this.singleExecTests : "");
         cmdArgs.add(Boolean.toString(isRerunTestExecution));
         cmdArgs.add(Boolean.toString(listGroups));
-        cliArgs.forEach((arg) -> {
-            cmdArgs.add(arg);
-        });
+        cmdArgs.add(Boolean.toString(isParallelExecution));
+        cmdArgs.addAll(cliArgs);
 
         ProcessBuilder processBuilder = new ProcessBuilder(cmdArgs).inheritIO();
         Process proc = processBuilder.start();
@@ -400,7 +409,7 @@ public class RunTestsTask implements Task {
 
     private List<Path> getAllSourceFilePaths(String projectRootString) throws IOException {
         List<Path> sourceFilePaths = new ArrayList<>();
-        List<Path> paths = Files.walk(Paths.get(projectRootString), 3).collect(Collectors.toList());
+        List<Path> paths = Files.walk(Paths.get(projectRootString), 3).toList();
 
         if (isWindows) {
             projectRootString = projectRootString.replace(PATH_SEPARATOR, EXCLUDES_PATTERN_PATH_SEPARATOR);
