@@ -21,11 +21,13 @@ import io.ballerina.projects.environment.PackageCache;
 import io.ballerina.projects.environment.ProjectEnvironment;
 import io.ballerina.projects.internal.DefaultDiagnosticResult;
 import io.ballerina.projects.internal.PackageDiagnostic;
+import io.ballerina.projects.internal.ProjectDiagnosticErrorCode;
 import io.ballerina.projects.internal.jballerina.JarWriter;
 import io.ballerina.projects.internal.model.Target;
 import io.ballerina.projects.util.ProjectConstants;
 import io.ballerina.projects.util.ProjectUtils;
 import io.ballerina.tools.diagnostics.Diagnostic;
+import io.ballerina.tools.diagnostics.DiagnosticInfo;
 import io.ballerina.tools.diagnostics.DiagnosticSeverity;
 import org.apache.commons.compress.archivers.jar.JarArchiveEntry;
 import org.apache.commons.compress.archivers.zip.ZipArchiveEntryPredicate;
@@ -45,12 +47,8 @@ import org.wso2.ballerinalang.compiler.bir.codegen.CodeGenerator;
 import org.wso2.ballerinalang.compiler.bir.codegen.bytecodeOptimizer.NativeDependencyOptimizer;
 import org.wso2.ballerinalang.compiler.bir.codegen.interop.InteropValidator;
 import org.wso2.ballerinalang.compiler.bir.model.BIRNode;
-import org.wso2.ballerinalang.compiler.semantics.analyzer.ObservabilitySymbolCollectorRunner;
 import org.wso2.ballerinalang.compiler.semantics.model.SymbolTable;
 import org.wso2.ballerinalang.compiler.semantics.model.symbols.BPackageSymbol;
-import org.wso2.ballerinalang.compiler.semantics.model.symbols.UsedState;
-import org.wso2.ballerinalang.compiler.semantics.model.types.BIntersectionType;
-import org.wso2.ballerinalang.compiler.spi.ObservabilitySymbolCollector;
 import org.wso2.ballerinalang.compiler.tree.BLangPackage;
 import org.wso2.ballerinalang.compiler.util.CompilerContext;
 import org.wso2.ballerinalang.util.Flags;
@@ -80,6 +78,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
@@ -130,6 +129,10 @@ public class JBallerinaBackend extends CompilerBackend {
     private static long birOptimizeDeletionTimeTotal = 0;
 
     public static JBallerinaBackend from(PackageCompilation packageCompilation, JvmTarget jdkVersion) {
+        return from(packageCompilation, jdkVersion, true);
+    }
+
+    public static JBallerinaBackend from(PackageCompilation packageCompilation, JvmTarget jdkVersion, boolean shrink) {
         // Check if the project has write permissions
         if (packageCompilation.packageContext().project().kind().equals(ProjectKind.BUILD_PROJECT)) {
             try {
@@ -139,10 +142,10 @@ public class JBallerinaBackend extends CompilerBackend {
             }
         }
         return packageCompilation.getCompilerBackend(jdkVersion,
-                (targetPlatform -> new JBallerinaBackend(packageCompilation, jdkVersion)));
+                (targetPlatform -> new JBallerinaBackend(packageCompilation, jdkVersion, shrink)));
     }
 
-    private JBallerinaBackend(PackageCompilation packageCompilation, JvmTarget jdkVersion) {
+    private JBallerinaBackend(PackageCompilation packageCompilation, JvmTarget jdkVersion, boolean shrink) {
         this.jdkVersion = jdkVersion;
         this.packageCompilation = packageCompilation;
         this.packageContext = packageCompilation.packageContext();
@@ -154,22 +157,16 @@ public class JBallerinaBackend extends CompilerBackend {
         this.compilerContext = projectEnvContext.getService(CompilerContext.class);
         this.interopValidator = InteropValidator.getInstance(compilerContext);
         this.jvmCodeGenerator = CodeGenerator.getInstance(compilerContext);
-        // TODO: Move to a compiler extension once Compiler revamp is complete
-        if (packageContext.compilationOptions().observabilityIncluded()) {
-            ObservabilitySymbolCollector observabilitySymbolCollector
-                    = ObservabilitySymbolCollectorRunner.getInstance(compilerContext);
-            observabilitySymbolCollector.process(packageContext.project());
-        }
         this.conflictedJars = new ArrayList<>();
         this.symbolTable = SymbolTable.getInstance(compilerContext);
-        performCodeGen();
+        performCodeGen(shrink);
     }
 
     PackageContext packageContext() {
         return this.packageContext;
     }
 
-    private void performCodeGen() {
+    private void performCodeGen(boolean shrink) {
         if (codeGenCompleted) {
             return;
         }
@@ -202,14 +199,14 @@ public class JBallerinaBackend extends CompilerBackend {
                 moduleDiagnostics.add(
                         new PackageDiagnostic(diagnostic, moduleContext.descriptor(), moduleContext.project()));
             }
-
+            if (shrink) {
+                ModuleContext.shrinkDocuments(moduleContext);
+            }
             // Codegen happens later when --optimize flag is active. Therefore, we cannot clean the BlangPkgs until then.
             if (!moduleContext.project().buildOptions().optimizeCodegen() &&
                     moduleContext.project().kind() == ProjectKind.BALA_PROJECT) {
                 moduleContext.cleanBLangPackage();
             }
-
-            ModuleContext.shrinkDocuments(moduleContext);
         }
 
         if (this.packageContext.project().buildOptions().optimizeCodegen()) {
@@ -341,45 +338,37 @@ public class JBallerinaBackend extends CompilerBackend {
         return diagnosticResult;
     }
 
-    // TODO EmitResult should not contain compilation diagnostics.
     public EmitResult emit(OutputType outputType, Path filePath) {
         Path generatedArtifact = null;
 
         if (diagnosticResult.hasErrors()) {
-            return new EmitResult(false, diagnosticResult, generatedArtifact);
+            return new EmitResult(false, new DefaultDiagnosticResult(new ArrayList<>()), generatedArtifact);
         }
 
-        switch (outputType) {
-            case GRAAL_EXEC:
-                // TODO merge --optimize and --graalvm
-                generatedArtifact = emitGraalExecutable(filePath);
-                break;
-            case EXEC:
-                generatedArtifact = emitExecutable(filePath);
-                break;
-            case BALA:
-                generatedArtifact = emitBala(filePath);
-                break;
-            case OPTIMIZE_CODEGEN:
-                generatedArtifact = emitOptimizedExecutable(filePath);
-                break;
-            default:
-                throw new RuntimeException("Unexpected output type: " + outputType);
-        }
+        List<Diagnostic> emitResultDiagnostics = new ArrayList<>();
+        generatedArtifact = switch (outputType) {
+            case GRAAL_EXEC -> emitGraalExecutable(filePath, emitResultDiagnostics);
+            case EXEC -> emitExecutable(filePath, emitResultDiagnostics);
+            case BALA -> emitBala(filePath);
+            case OPTIMIZE_CODEGEN -> emitOptimizedExecutable(filePath);
+            default -> throw new RuntimeException("Unexpected output type: " + outputType);
+        };
 
-        ArrayList<Diagnostic> diagnostics = new ArrayList<>(diagnosticResult.allDiagnostics);
+        ArrayList<Diagnostic> allDiagnostics = new ArrayList<>(diagnosticResult.allDiagnostics);
+        // Add lifecycle plugin diagnostics.
         List<Diagnostic> pluginDiagnostics = packageCompilation.notifyCompilationCompletion(filePath);
         if (!pluginDiagnostics.isEmpty()) {
-            diagnostics.addAll(pluginDiagnostics);
+            emitResultDiagnostics.addAll(pluginDiagnostics);
         }
-        diagnosticResult = new DefaultDiagnosticResult(diagnostics);
-
-        List<Diagnostic> allDiagnostics = new ArrayList<>(diagnostics);
-        jarResolver().diagnosticResult().diagnostics().stream().forEach(
-                diagnostic -> allDiagnostics.add(diagnostic));
+        // Add jar resolver diagnostics.
+        emitResultDiagnostics.addAll(jarResolver().diagnosticResult().diagnostics());
+        // JBallerinaBackend diagnostics contains all diagnostics.
+        // EmitResult will only contain diagnostics related to emitting the executable.
+        allDiagnostics.addAll(emitResultDiagnostics);
+        diagnosticResult = new DefaultDiagnosticResult(allDiagnostics);
 
         // TODO handle the EmitResult properly
-        return new EmitResult(true, new DefaultDiagnosticResult(allDiagnostics), generatedArtifact);
+        return new EmitResult(true, new DefaultDiagnosticResult(emitResultDiagnostics), generatedArtifact);
     }
 
     private Path emitBala(Path filePath) {
@@ -406,7 +395,9 @@ public class JBallerinaBackend extends CompilerBackend {
         Package pkg = packageCache.getPackageOrThrow(packageId);
         Map<String, PackageManifest.Platform> platforms = pkg.manifest().platforms();
         List<PlatformLibrary> platformLibraries = new ArrayList<>();
-        for (PackageManifest.Platform javaPlatform : platforms.values()) {
+        for (Map.Entry<String, PackageManifest.Platform> entry : platforms.entrySet()) {
+            PackageManifest.Platform javaPlatform = entry.getValue();
+            String platform = entry.getKey();
             if (javaPlatform == null || javaPlatform.dependencies().isEmpty()) {
                 continue;
             }
@@ -416,19 +407,31 @@ public class JBallerinaBackend extends CompilerBackend {
                 String groupId = (String) dependency.get(JarLibrary.KEY_GROUP_ID);
 
                 String dependencyFilePath = (String) dependency.get(JarLibrary.KEY_PATH);
+                PlatformLibraryScope dependencyScope = getPlatformLibraryScope(dependency);
+
                 // If dependencyFilePath does not exist, resolve it using MavenResolver
                 if (dependencyFilePath == null || dependencyFilePath.isEmpty()) {
-                    dependencyFilePath = getPlatformLibPath(groupId, artifactId, version);
+                    // if the dependency is transitive and has provided scope, check the current package's
+                    // Ballerina.toml for provided platform dependencies
+                    if (Objects.equals(dependencyScope, PlatformLibraryScope.PROVIDED)
+                            && !Objects.equals(packageId, this.packageContext().packageId())) {
+                        dependencyFilePath = getPlatformLibPathFromProvided(platform, groupId, artifactId, version);
+                        Path jarPath = Paths.get(dependencyFilePath);
+                        if (!jarPath.isAbsolute()) {
+                            jarPath = this.packageContext().project().sourceRoot().resolve(jarPath);
+                        }
+                        dependencyFilePath = jarPath.toString();
+                    } else {
+                        dependencyFilePath = getPlatformLibPath(groupId, artifactId, version);
+                    }
+                    dependency.put(JarLibrary.KEY_PATH, dependencyFilePath);
                 }
-
-                // If the path is relative we will covert to absolute relative to Ballerina.toml file
+                // If the path is relative we will convert to absolute relative to Ballerina.toml file
                 Path jarPath = Paths.get(dependencyFilePath);
                 if (!jarPath.isAbsolute()) {
                     jarPath = pkg.project().sourceRoot().resolve(jarPath);
                 }
-
-                PlatformLibraryScope scope = getPlatformLibraryScope(dependency);
-                platformLibraries.add(new JarLibrary(jarPath, scope, artifactId, groupId, version,
+                platformLibraries.add(new JarLibrary(jarPath, dependencyScope, artifactId, groupId, version,
                         pkg.packageOrg().value() + "/" + pkg.packageName().value()));
             }
         }
@@ -659,8 +662,7 @@ public class JBallerinaBackend extends CompilerBackend {
 
             // Sort jar libraries list to avoid inconsistent jar reporting
             List<JarLibrary> sortedJarLibraries = jarLibraries.stream()
-                    .sorted(Comparator.comparing(jarLibrary -> jarLibrary.path().getFileName()))
-                    .collect(Collectors.toList());
+                    .sorted(Comparator.comparing(jarLibrary -> jarLibrary.path().getFileName())).toList();
 
             // Copy all the jars
             for (JarLibrary library : sortedJarLibraries) {
@@ -886,7 +888,7 @@ public class JBallerinaBackend extends CompilerBackend {
     }
 
     private static boolean isCopiedEntry(String entryName, HashMap<String, JarLibrary> copiedEntries) {
-        return copiedEntries.keySet().contains(entryName);
+        return copiedEntries.containsKey(entryName);
     }
 
     private static boolean isExcludedEntry(String entryName) {
@@ -908,9 +910,11 @@ public class JBallerinaBackend extends CompilerBackend {
                 scope);
     }
 
-    private Path emitExecutable(Path executableFilePath) {
+    private Path emitExecutable(Path executableFilePath, List<Diagnostic> emitResultDiagnostics) {
         Manifest manifest = createManifest(false);
         Collection<JarLibrary> jarLibraries = jarResolver.getJarFilePathsRequiredForExecution(false);
+        // Add warning when provided platform dependencies are found
+        addProvidedDependencyWarning(emitResultDiagnostics);
         try {
             assembleExecutableJar(executableFilePath, manifest, jarLibraries);
         } catch (IOException e) {
@@ -933,9 +937,9 @@ public class JBallerinaBackend extends CompilerBackend {
         return executableFilePath;
     }
 
-    private Path emitGraalExecutable(Path executableFilePath) {
+    private Path emitGraalExecutable(Path executableFilePath, List<Diagnostic> emitResultDiagnostics) {
         // Run create executable
-        emitExecutable(executableFilePath);
+        emitExecutable(executableFilePath, emitResultDiagnostics);
 
         String nativeImageName;
         String[] command;
@@ -1014,8 +1018,7 @@ public class JBallerinaBackend extends CompilerBackend {
             Thread.currentThread().interrupt();
         }
 
-        Path graalexectablepath = Path.of(FilenameUtils.removeExtension(executableFilePath.toString()));
-        return graalexectablepath;
+        return Path.of(FilenameUtils.removeExtension(executableFilePath.toString()));
     }
 
     private Map<String, byte[]> getResources(ModuleContext moduleContext) {
@@ -1049,8 +1052,10 @@ public class JBallerinaBackend extends CompilerBackend {
         String scopeValue = (String) dependency.get(JarLibrary.KEY_SCOPE);
         if (scopeValue == null || scopeValue.isEmpty()) {
             scope = PlatformLibraryScope.DEFAULT;
-        } else if (scopeValue.equals(PlatformLibraryScope.TEST_ONLY.getStringValue())) {
+        } else if (PlatformLibraryScope.TEST_ONLY.getStringValue().equals(scopeValue)) {
             scope = PlatformLibraryScope.TEST_ONLY;
+        } else if (PlatformLibraryScope.PROVIDED.getStringValue().equals(scopeValue)) {
+            scope = PlatformLibraryScope.PROVIDED;
         } else {
             throw new ProjectException("Invalid scope '" + scopeValue + "' is defined with the " +
                     "platform-specific library path: " + dependency.get(JarLibrary.KEY_PATH));
@@ -1068,7 +1073,7 @@ public class JBallerinaBackend extends CompilerBackend {
      */
     private String getPlatformLibPath(String groupId, String artifactId, String version) {
         String targetRepo =
-                this.packageContext.project().targetDir().resolve(ProjectConstants.TARGET_DIR_NAME).toString()
+                this.packageContext.project().targetDir().resolve(ProjectConstants.TARGET_DIR_NAME)
                         + File.separator + "platform" + "-libs";
         MavenResolver resolver = new MavenResolver(targetRepo);
         try {
@@ -1077,6 +1082,35 @@ public class JBallerinaBackend extends CompilerBackend {
         } catch (MavenResolverException e) {
             throw new ProjectException("cannot resolve " + artifactId + ": " + e.getMessage());
         }
+    }
+
+    /**
+     * Get platform lib path for platform libs with provided scope in dependencies.
+     *
+     * @param platform java platform of the dependency
+     * @param groupId group id
+     * @param artifactId artifact id
+     * @param version version
+     * @return platform lib path provided by user
+     */
+    private String getPlatformLibPathFromProvided(String platform, String groupId, String artifactId, String version) {
+        PackageManifest.Platform currentPlatform = this.packageContext().packageManifest().platform(platform);
+        if (currentPlatform != null) {
+            for (Map<String, Object> platformDep :
+                    currentPlatform.dependencies()) {
+                String depArtifactId = (String) platformDep.get(JarLibrary.KEY_ARTIFACT_ID);
+                String depVersion = (String) platformDep.get(JarLibrary.KEY_VERSION);
+                String depGroupId = (String) platformDep.get(JarLibrary.KEY_GROUP_ID);
+                String depFilepath = (String) platformDep.get(JarLibrary.KEY_PATH);
+                if (artifactId.equals(depArtifactId) && groupId.equals(depGroupId)
+                        && version.equals(depVersion) && depFilepath != null && !depFilepath.isEmpty()) {
+                    return depFilepath;
+                }
+            }
+        }
+        throw new ProjectException(String.format("cannot resolve '%s:%s:%s'. Dependencies with " +
+                "'%s' scope need to be manually added to Ballerina.toml.", groupId, artifactId, version,
+                PlatformLibraryScope.PROVIDED.getStringValue()));
     }
 
     /**
@@ -1174,5 +1208,17 @@ public class JBallerinaBackend extends CompilerBackend {
             }
         }
         return null;
+    }
+
+    private void addProvidedDependencyWarning(List<Diagnostic> emitResultDiagnostics) {
+        if (!jarResolver.providedPlatformLibs().isEmpty()) {
+            DiagnosticInfo diagnosticInfo = new DiagnosticInfo(
+                    ProjectDiagnosticErrorCode.PROVIDED_PLATFORM_JAR_IN_EXECUTABLE.diagnosticId(),
+                    String.format("Detected platform dependencies with '%s' scope. Redistribution is discouraged" +
+                            " due to potential license restrictions%n", PlatformLibraryScope.PROVIDED.getStringValue()),
+                    DiagnosticSeverity.WARNING);
+            emitResultDiagnostics.add(new PackageDiagnostic(diagnosticInfo,
+                    this.packageContext().descriptor().name().toString()));
+        }
     }
 }
